JT-7416-fix Change media breakpoint to fix padding issue on small screens

--- a/app/assets/stylesheets/pages/search/_search_page.scss
+++ b/app/assets/stylesheets/pages/search/_search_page.scss
@@ -42,7 +42,7 @@ body {
 
     padding: 130px 0 0 0;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(xs) {
       padding: 0;
     }
 
